--- a/styles/mission.css
+++ b/styles/mission.css
@@ -74,20 +74,19 @@
 
 /* footer-section */
 .footer-title {
-    text-align: center;
+    
     font-size: 65px;
     font-weight: bold;
-    justify-content: center;
+    
 }
 
 .plans-container {
     width: 1141px;
     height: 299.96px;
-    left: 230px;
-    top: 1792.3px;
-    margin-top: 130px;
-    justify-content: center;
-    align-items: center;
+    margin-top: 230px;
+    margin-left: 220px;
+
+    
     text-align: center;
 }
 
@@ -101,8 +100,7 @@
 .motivated-box {
     width: 1140px;
     height: 300px;
-    left: 230px;
-    top: 2222.26px;
+    margin-left: 220px;
     justify-content: center;
     margin-top: 120px;
     border-radius: 8px;
@@ -129,14 +127,24 @@
     justify-content: center;
     align-items: center;
 }
+.social-media{
+    margin-top: 150px;
+    margin-left: 200px;
+}
 
 .future-section {
     display: flex;
     background-color: black;
     width: 1600px;
     height: 577px;
-    left: 0px;
-    top: 2652.26px;
-    color: white;
     
+    margin-top: 150px;
+    color: white;
+    border: 16px;
+    
+}
+.input-title{
+    width: 50%;
+    margin-left: 220px;
+    margin-top: 150px;
 }
